# Project-SmartHome-Control-Tablet-using-CrowPanel-Advance-AI-Display

./: MQTT-broker.md  README.md  flowChart.md
Codes/SmartHomeTab/: partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
Codes/SmartHomeTab-RoomHub/: SmartHomeTab-RoomHub.ino
Codes/SmartHomeTab/components/espressif__esp_lcd_touch_gt911/: esp_lcd_touch_gt911.c
Codes/SmartHomeTab/components/lvgl__lvgl/demos/music/: lv_demo_music.c  lv_demo_music_list.c  lv_demo_music_main.c
Codes/SmartHomeTab/main/: CMakeLists.txt  main.c  mqtt_manager.c  mqtt_manager.h  ui_mqtt_bridge.c  ui_mqtt_bridge.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h  wifi_manager.c  wifi_manager.h
Codes/SmartHomeTab/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_panel10.c  ui_comp_panel10.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1202935209.c  ui_img_1309870313.c  ui_img_1800988192.c  ui_img_1800991266.c  ui_img_1995169899.c  ui_img_268687432.c  ui_img_337869367.c  ui_img_441248079.c  ui_img_brightness_png.c  ui_img_bulb_png.c  ui_img_fan_png.c  ui_img_humidity_png.c  ui_img_notification_png.c  ui_img_settings_png.c  ui_img_silent_png.c  ui_img_switch_png.c  ui_img_temperature_png.c
