SET(SOURCES ui_comp_panel10.c
    ui_comp.c
    ui_Screen1.c
    ui_Screen2.c
    ui_Screen3.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_337869367.c
    ui_img_441248079.c
    ui_img_switch_png.c
    ui_img_notification_png.c
    ui_img_silent_png.c
    ui_img_268687432.c
    ui_img_1995169899.c
    ui_img_1800991266.c
    ui_img_temperature_png.c
    ui_img_humidity_png.c
    ui_img_brightness_png.c
    ui_img_1800988192.c
    ui_img_settings_png.c
    ui_img_1202935209.c
    ui_img_1309870313.c
    ui_img_fan_png.c
    ui_img_bulb_png.c)

add_library(ui ${SOURCES})
